feat(DU): Update test for deleted recipient filtering